foi acrencentado um paragrafo

--- a/primeiroarquivo.html
+++ b/primeiroarquivo.html
@@ -1,4 +1,5 @@
 <body>
     <h2>amogus</h2>
     <div>como descobrir o impostor</div>
+     <p>1 se vocé estiver lendo vocé é o impostor</p>
 </body>
